# cs-geodata

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Design.md  README.md  app.dockerfile  benchmark.py  checks.py  compose.yaml  main.py  pyproject.toml  worker.py  workers.dockerfile  workers.py
.github/: todos.md
.github/workflows/: ci.yml
api_tests/conversion_pipeline/: health_check.yml  opencollection.yml  runs.yml  validate_desc.yml
configs/: .credentials.ini
data/: themes.json
descriptors/: mws_v1.toml  tehsil_v1.toml
docs/docs/: src.rst
docs/source/: conf.py  index.rst  src.handlers.rst  src.utils.rst
examples/: mws.json
research/: geospatial_format_comparison.ipynb
src/: categorizer.py  fetch.py
src/api/: __init__.py  models.py  routes.py
src/app/: models.py
src/conversion/: algos.py  layers.py
src/conversion/algos/: mws.py
src/conversion/algos/mws/: __init__.py  (+1 more)
src/conversion/helpers/: api.py  cleaners.py  duckdb_funcs.py  geojoin.py  merge.py  scheduler.py
src/descriptor/: __init__.py  schema.py  validator.py
src/handlers/: geojson.py  geotiff.py
src/pipeline/: __init__.py  fetch.py  fetch_job.py  merge.py  normalise.py  orchestrator.py  reshape.py  write.py
src/progress/: __init__.py  store.py
src/routers/: geojson.py
src/sources/: __init__.py  base.py  s3.py  wfs.py
src/stac/: __init__.py  client.py
src/utils/: checks.py  configs.py  downloader.py  duckdb.py  redis_client.py  s3.py  workspace.py
src/work/: __init__.py  work_queue.py
tests/: test_api_routes.py  test_categorizer.py  test_descriptor.py  test_downloader.py  test_fetch.py  test_fetch_stage.py  test_geotiff.py  test_orchestrator.py  test_pipeline_merge.py  test_pipeline_stages.py  test_progress_store.py  test_s3_support.py  test_sources.py  test_stac_client.py  test_write_stage.py
