[project]
name = "cs-geodata"
version = "0.1.0"
description = "A converter for CoREStack data to cloud native forms."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.81",
    "duckdb>=1.5.1",
    "fastapi[standard]>=0.135.3",
    "geopandas>=1.1.3",
    "loguru>=0.7.3",
    "polars>=1.39.3",
    "polars-st>=0.6.2",
    "requests>=2.33.1",
    "rq>=2.7.0",
    "s3fs>=0.4.2",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.8",
]

[tool.pyright]
executionEnvironments = [
    { root = "." }
]
