[project]
name = "cs-geodata"
version = "0.1.0"
description = "A converter for CoREStack data to cloud native forms."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.1",
    "fastapi[standard]>=0.135.3",
    "fsspec>=2025.12.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "polars>=1.39.3",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "rq>=2.7.0",
    "s3fs>=0.4.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.pyright]
executionEnvironments = [
    { root = "." }
]

[tool.pytest.ini_options]
pythonpath = ["."]
